--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ serde = { version = "1.0.159"}
 serde_derive = { version = "1.0.159"}
 battery = "0.7.8"
 ron = "0.8.0"
-gtk = "0.17.1"
-gtk-layer-shell = "0.6.1"
+gtk4 = "0.6.6"
+gtk4-layer-shell = "0.0.3"
 psutil = "3.2.2"
 dirs = "5.0.0"
 
